Initial Page Changes
Done to get the feel for github's website generator.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Stephen-briggs2.GitHub.io</h1>
-        <h2></h2>
+        <h1>Welcome to Stephen's Homepage!</h1>
+        <h2>Keep going, this is just a test.</h2>
         <a href="https://github.com/stephen-briggs2" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
